tests/errors/substructural/check/copy_in_enum_payload_of_non_copy.sim

        struct Linear { r: &out i64 }
        enum Wrap { W: Linear }
        fn f(x: Linear) {
            w: Wrap;
            entry:
            w = Wrap::W(copy x);
            return
        }
        